tooling/nargo_cli/tests/snapshots/execute__tests__bit_not_force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "3950179138574032466",
  "abi": {
    "parameters": [
      {
        "name": "four_as_u32",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/6XOQQqAMAwEQAs+KGmSdnPzKxbT/z9BREVB9OJcFvawbBouaXg6u+lIoaIaNQcLz5S9wUitFTDYYEuGSEBRvXklZ5Xgbi6ddvct+ke3b+PH9zcrS3zcEvQAAAA=",
  "debug_symbols": "TYzLCoMwEEX/ZdYuVNpF8yulSB4TGQiTMEkKJfjvjaLg8tzDPQ0cmrouxD5mUO8GIVpdKHKnBuMx5aR5p1y0FFDT6zEAsgM1z9M2gKeAoJ7j9ulghEKgdbln+vzVQtoEPNFXtjdbfuky1z9JtOiq4F46XM//AQ==",
  "file_map": {
    "50": {
      "source": "fn main(four_as_u32: u32) {\n    let four_as_u8: u8 = 4;\n    let not_four_as_u8: u8 = !four_as_u8;\n    assert_eq(not_four_as_u8, 251);\n\n    let not_four_as_u32: u32 = !four_as_u32;\n    assert_eq(not_four_as_u32, 4294967291);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/bit_not/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
