tooling/nargo_cli/tests/snapshots/execute__tests__bit_not_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9553405488637523522",
  "abi": {
    "parameters": [
      {
        "name": "four_as_u32",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUwQ7CIAwFxSguetDoRT+iy7Zsxx38EXThO/bpZrGV2jAPCu/SkpbX15agVYBGa8RZRXJ6tPAfyoRcEBX6DZRzRWvRLlh8mbBZK+qm5O+gbmykv4T6K4ucOedDnBn4YY08tzHwy14Us5Qn70zxHfr8nVHOBuPk79G34k6O/WfcDxwj+qlWgb2e8byIaNFsvrlm4V+4a/W5U4P+nKaVyD+JnZnEOgkHxqtErUKFP8mM6eu3HcB7J2OYA82Aw7A4z7/geTvTR/+jTt+60lfOu8YNQ/1wck4T+Nt7AsJZi6PJBgAA",
  "debug_symbols": "lZDBCoMwDIbfJecebDbn9FXGkKpRCqWVWgej9N3XDg9l89JLyB/yJfB5mGjYl17q2WzQPTwoMwonjY7JBwaDlUrJpc/HUKXC6+/+tgqd4uaEddBxjgxIT7G78MjPUhF0dRWeDPjtlGivB4H4RzTFxL2YaEsJrMqIENNLWCkGRYfWeddjZtm9V/oRvloz0rRbSuoz6+k3IsMmno2nPw==",
  "file_map": {
    "50": {
      "source": "fn main(four_as_u32: u32) {\n    let four_as_u8: u8 = 4;\n    let not_four_as_u8: u8 = !four_as_u8;\n    assert_eq(not_four_as_u8, 251);\n\n    let not_four_as_u32: u32 = !four_as_u32;\n    assert_eq(not_four_as_u32, 4294967291);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/bit_not/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
